[tool.poetry]
name = "test-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Rob Young <rob@robyoung.digital>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.32"
psycopg2 = "^2.9.3"
ipdb = "^0.13.9"
ipython = "^8.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
